refactor[mapper]:  simplifica os métodos do mapper HealthProfessionalMapper